src/objects/Case_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Labor_Hours__c</fullName>
        <label>Estimated Labor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For__c</fullName>
        <label>Reason For</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <default>true</default>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QA Program</fullName>
                    <default>true</default>
                    <label>QA Program</label>
                </value>
                <value>
                    <fullName>Fix on Fail</fullName>
                </value>
                <value>
                    <fullName>Known Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Plan</label>
    <nameField>
        <label>Case Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>